# LLM-Hub

./: .gitignore  LICENSE  README.md  config-template.toml  pyproject.toml  requirements.txt
docs/: GUIDE.md  QUICKSTART.md
docs/internal/claude-memory/: ARCHITECTURE_NOTES.md  CONFIG_NOTES.md  KNOWN_ISSUES_AND_DEBUG.md  README.md  STATUS.md  TESTING_STATUS.md
prompts/: base_system_actor.txt  base_system_analyst.txt  base_system_architect.txt  base_system_attacker.txt  base_system_creative.txt  base_system_defender.txt  base_system_interrogator.txt  base_system_judge.txt  base_system_mediator.txt  base_system_operations.txt  base_system_product.txt  base_system_researcher.txt  base_system_skeptic.txt
prompts/start_examples/: adversarial.txt  consensus.txt  debate.txt  design_review.txt  interrogation.txt
src/: __init__.py  guardrails.py  hub.py  memory.py  router.py  session.py
src/adapters/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/utils/: __init__.py  config.py  debug.py  logging.py  stats.py
tests/: __init__.py  test_adapters.py  test_config.py  test_guardrails.py  test_integration_live.py  test_memory.py  test_router.py
