[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lan-llm-hub"
version = "0.1.0"
description = "Configuration-driven multi-agent LLM orchestrator for LAN-hosted conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
lan-llm-hub = "src.hub:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
